--- a/secrets.toml
+++ b/secrets.toml
@@ -4,6 +4,16 @@ admin_password = "admin123"
 # API Keys
 gemini_api_key = "AIzaSyDgXTOjepYdcLrEc0zc20rWZAFR5297VfQ"
 
+# Imgur Configuration
+# To get your Imgur client ID:
+# 1. Go to https://api.imgur.com/oauth2/addclient
+# 2. Sign in to Imgur (or create an account)
+# 3. Register a new application with these settings:
+#    - Application name: Garment Chatbot
+#    - Authorization type: OAuth 2 authorization without a callback URL
+# 4. Copy your Client ID and paste it below (replace YOUR_CLIENT_ID)
+imgur_client_id = "YOUR_CLIENT_ID"  # ⚠️ Replace with your actual Imgur Client ID
+
 # Database configuration
 db_path = "garment_database.db"
 
