--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ numpy>=1.26.0
 Pillow>=10.0.0  # For image handling
 requests>=2.31.0  # For URL validation
 pyarrow>=11.0.0  # Added for data_editor compatibility
+tomli>=2.0.1  # For reading TOML configuration files
